<resources>
    <string name="app_name">Mutmaen</string>
    <string name="select_your_language">Select your language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="japanese">Japanese</string>
    <string name="korean">korean</string>
    <string name="indonesia">Indonesia</string>
    <string name="india">India</string>
    <string name="gender">Gender:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="diabetes">Diabetes:</string>
    <string name="blood">Blood:</string>
    <string name="pressure">Pressure:</string>
    <string name="medication">Medication:</string>
    <string name="confirm">Confirm</string>
    <string name="triage_done">Triage Done</string>
    <string name="to_video_call">To video call</string>
    <string name="start">start</string>
    <string name="blood_and_pressure">Blood and Pressure</string>
    <string name="medications">Medications</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="thank_you">Thank you</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="number31">31</string>
    <string name="firstname_Question">First name</string>
    <string name="lastname_Question">Last name</string>
    <string name="diabetes_Question">Do you have diabites</string>
    <string name="blood_and_pressure_Question">Do you have Blood Pressure</string>
    <string name="medications_Question">Your medications</string>

</resources>
