<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/group430"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <View
        android:id="@+id/lineView"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@id/logoImageView"
        app:layout_constraintStart_toEndOf="@id/logoImageView"
        app:layout_constraintTop_toTopOf="@id/logoImageView"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/select_your_language"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/lineView"
        app:layout_constraintStart_toEndOf="@id/lineView"
        app:layout_constraintTop_toTopOf="@id/lineView"
        tools:ignore="RtlCompat" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/backgroundIamgeView"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:id="@+id/englishButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/input_text_border"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/indonesiaButton"
                app:layout_constraintEnd_toStartOf="@+id/frenchButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:src="@drawable/group409" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/frenchButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/input_text_border"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/indiaButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/englishButton"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:src="@drawable/group323" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/french"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/japaneseButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/input_text_border"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/koreanButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indonesiaButton"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:src="@drawable/group307" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/japanese"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/koreanButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/input_text_border"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/japaneseButton"
                app:layout_constraintTop_toBottomOf="@+id/indiaButton"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:src="@drawable/group358" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/korean"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/indonesiaButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/input_text_border"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/japaneseButton"
                app:layout_constraintEnd_toStartOf="@+id/indiaButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/englishButton"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:src="@drawable/group371" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indonesia"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/indiaButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/input_text_border"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/koreanButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/indonesiaButton"
                app:layout_constraintTop_toBottomOf="@+id/frenchButton"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:src="@drawable/group393" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/india"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/backgroundIamgeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/group433"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>